# XJTU-RMV-Task01

./: .gitignore  01.md  README.md
opencv_project/: CMakeLists.txt  README.md  test.cpp
opencv_project/src/: main.cpp
第二次任务喵/: CMakeLists.txt  README.md  main.cpp  readme.md  任务书.md
第二次任务喵/include/: windmill.hpp
第二次任务喵/src/: windmill.cpp
